# ifeval-da

./: .gitignore  README.md  pyproject.toml
data/: danish.jsonl  translated.jsonl
scripts/: evaluate_openai_api.py  translate_data.py
src/ifeval_da/: __init__.py  cli.py  evaluation_lib.py  evaluation_lib_key_based.py  evaluation_main.py  instructions.py  instructions_registry.py  instructions_util.py
